--- a/shopImooc/less/admin/globala.less
+++ b/shopImooc/less/admin/globala.less
@@ -2,11 +2,11 @@
 @globalcolor:#1D7AD9;
 @sidebarcolor:#1d7ad9;
 @sidebarWidth:200px;
-@subCMinWidth:600px;
+@subCMinWidth:1000px;
 html, body{ height:100%; font-family:"\5FAE\8F6F\96C5\9ED1", Tahoma, Helvetica Neue, Helvetica, Arial, Hiragino Sans GB, Microsoft Yahei, Simhei, sans-serif }
 .g-wrap{position: relative; width:100%; height:100%;  }
 
-.subContent{position: absolute; left: @sidebarWidth;top: 90px;right: 0px; }
+.subContent{position: absolute; left: @sidebarWidth;top: 90px;right: 0px; width: @subCMinWidth; }
 .m-titlebar{min-width: @subCMinWidth;
   background-color: #eee; height: 40px;line-height: 40px;font-size: 14px;
 }
