--- a/shopImooc/less/admin/index.less
+++ b/shopImooc/less/admin/index.less
@@ -1,7 +1,10 @@
 @import "globala.less";
 
-.m-table { width: 600px;
-  .tablewrap{position: relative; margin-top: 20px;margin-left: 20px;width: 560px;
+.m-table { width: 900px;
+  .tablewrap{position: relative; margin-top: 20px;margin-left: 20px;width: 860px;
     h3{text-align: center;}
+
   }
+  .m-choosebar{position: relative; margin: 20px 20px 10px 10px;  height: 24px;}
+
 }
