userlist useradd pro order
userlist useradd pro order

--- a/shopImooc/less/admin/index.less
+++ b/shopImooc/less/admin/index.less
@@ -5,6 +5,7 @@
     h3{text-align: center;}
 
   }
-  .m-choosebar{position: relative; margin: 20px 20px 10px 10px;  height: 24px;}
+  .m-choosebar{position: relative; margin: 20px 0px 10px 10px;  height: 24px;}
+  .m-price, .m-search {margin-right: 20px; line-height: 24px;}
 
 }
